examples/kit-nextjs-product-listing/src/app/globals.css
@import '../assets/styles/globals.css';
@import '../assets/styles/tailwind-bootstrap-grid.css';
@import '../assets/styles/column-splitter.css';
@import 'tailwindcss';

/* bootstrap grid to tailwind plugin */
@plugin 'tailwind-bootstrap-grid' {
  container_max_widths:
    'sm', '576px', 'md', '768px', 'lg', '992px', 'xl', '1200px', '2xl', '1400px';
}

/* preload tailwind-bootstrap-grid utility classes */
@source inline("col-{1..12}");
@source inline("offset-{1..12}");

@layer base {
  html {
    font-family: 'Open Sans', 'Segoe UI', SegueUI, 'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-size: 1rem;
    line-height: 1.5;
    font-weight: 400;
    color: var(--color-brand-black);
  }

  * {
    font-family: var(--font-body);
  }

  h1,
  .h1,
  h2,
  .h2,
  h3,
  .h3,
  h4,
  .h4,
  h5,
  .h5,
  h6,
  .h6 {
    font-family: var(--font-heading);
    @apply leading-normal;

    span {
      font-family: inherit;
    }
  }

  h1,
  .h1 {
    @apply text-6xl md:text-8xl;
  }

  h2,
  .h2 {
    @apply text-5xl md:text-7xl;
  }

  h3,
  .h3 {
    @apply text-4xl md:text-5xl;
  }

  h4,
  .h4 {
    @apply text-2xl md:text-3xl;
  }

  h5,
  .h5 {
    @apply text-xl md:text-2xl;
  }

  body {
    font-feature-settings:
      'rlig' 1,
      'calt' 1;
  }

  /* BUTTONS */
  .btn {
    font-family: var(--font-accent);
    @apply inline-block text-sm font-medium transition-colors;

    &.btn-primary {
      @apply py-3 px-5 rounded-full bg-primary;

      &:hover {
        @apply bg-primary-hover;
      }
    }

    &.btn-secondary {
      @apply py-3 px-5 rounded-full bg-light text-secondary-foreground;

      &:hover {
        @apply bg-light-hover;
      }
    }

    &.btn-ghost {
      @apply py-2;
    }

    &.btn-sharp {
      @apply rounded-none;
    }

    &.btn-ghost {
      @apply py-2;
    }

    &.btn-outline {
      @apply py-3 px-5 rounded-full bg-primary outline;
    }

    &:hover {
      @apply bg-primary-hover;
    }
  }
}

/* BUTTONS END */

main {
  @apply text-xl;
}

.xa-variable {
  border: 0px;
  padding: 1px;
  margin: 0px;
  background-color: #ebebe4;
  color: #545454;
  user-select: none;
  pointer-events: none;
}

.menu-mobile-navigate {
  display: none;
}

.sc-jss-empty-placeholder {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  position: relative;
}

.sc-jss-placeholder-error {
  background: #ff0000;
  outline: 5px solid #e36565;
  padding: 10px;
  color: #fff;
  max-width: 500px;
}

.content-sdk-rich-text {
  ul {
    list-style: disc;

    li {
      list-style-type: disc !important;
      padding-left: calc((2 * 0.5rem) + 1.5625rem);
    }
  }
}

/* FADE ANIMATIONS */

.animate .fade-section {
  opacity: 0;
  visibility: hidden;
  transition:
    opacity 0.8s ease-out,
    transform 1s ease-out;
  will-change: opacity, visibility;
}

.animate .fade-section.fade-up {
  transform: translateY(200px);
}

.animate .fade-section.fade-side {
  transform: translateX(200px);
}

.animate .fade-section.is-visible {
  opacity: 1 !important;
  transform: none !important;
  visibility: visible !important;
}

/* Disable when editing and on mobile */
.editing-mode .animate .fade-section {
  opacity: 1 !important;
  transform: none !important;
  visibility: visible !important;
}

@media (width <= 40rem) {
  .animate .fade-section {
    opacity: 1 !important;
    transform: none !important;
    visibility: visible !important;
  }
}

/* MARQUEE ANIMATION */
@keyframes marquee {
  0% {
    transform: translateX(0%);
  }
  100% {
    transform: translateX(-50%);
  }
}

.animate-marquee {
  animation: marquee linear infinite;

  .editing-mode & {
    transform: none !important;
  }
}

/* HEADER STYLES */

.partial-editing-mode header {
  @apply static mb-0 overflow-hidden;
}

